Ajout de nouvelles features
